@@ -1,3 +1,10 @@
+2004-12-21  Sven Neumann  <neumann@jpk.com>
+
+	* plug-ins/common/unsharp.c: reverted the last change since it
+	introduced artefacts. Even had to increase the border around the
+	previewed area. Fixed a bug in the unsharp_region where it was
+	using the wrong source region for blurring.
+
 2004-12-21  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/unsharp.c: compute preview for the displayed area
